Tests/Metalama.Framework.Tests.Integration/Tests/Aspects/InvalidCode/__CallInvalidMethod.t.cs
// CompileTimeAspectPipeline.ExecuteAsync failed. 
// Error CS0103 on `InvalidMethod`: `The name 'InvalidMethod' does not exist in the current context`
